# AnimeNo

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: build.yml
animeno/: main.py
web/: package.json  pnpm-lock.yaml  rsbuild.config.mjs  tailwind.config.js
web/src/: App.jsx  index.jsx
