[tool.poetry]
name = "animeno"
version = "0.1.0"
description = ""
authors = ["lzw-723 <lzw-723@qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
falcon = "^3.1.3"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
arrow = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
